Bug 129905 - Cannot turn off section boundaries with Options-Application Colors
Summary: Cannot turn off section boundaries with Options-Application Colors
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.3.4.2 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.6.0 target:24.8.0 target:24....
Keywords: needsUXEval
: 124510 (view as bug list)
Depends on:
Blocks: Options-Dialog-Colours
  Show dependency treegraph
 
Reported: 2020-01-09 10:10 UTC by sdc.blanco
Modified: 2024-03-27 20:15 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description sdc.blanco 2020-01-09 10:10:58 UTC
1. Insert>Section
2. Tools>Options-LibreOffice - Application Colors
3. Unclick "Section Boundaries"
4. Apply

Actual:   Boundaries still visible
Expected:  Boundaries disappear

Additional information.
1. Problem remains even if application is closed and restarted.
2. Possible to change color of boundary
3. Also reproduced in LO 6.5.0.0.alpha
Comment 1 Dagmara 2020-01-09 11:24:15 UTC
I can confirm the bug with the following versions:
Version: 6.4.0.1 (x64)
Build ID: 1b6477b31f0334bd8620a96f0aeeb449b587be9f
CPU threads: 4; OS: Windows 10.0 Build 18362; UI render: default; VCL: win; 
Locale: en-US (pl_PL); UI-Language: en-US
Calc: threaded
and
Version: 6.5.0.0.alpha0+ (x64)
Build ID: d9fe1a661c6a76f0b122c82edf73ec9efbdff349
CPU threads: 4; OS: Windows 10.0 Build 18362; UI render: GL; VCL: win; 
Locale: pl-PL (pl_PL); UI-Language: en-US
Calc: CL
Boundaries remain visible after unclicking "section boundaries".
Comment 2 Julien Nabet 2020-01-09 20:34:26 UTC
On pc Debian x86-64 with master sources updated today, I could reproduce this.

I noticed too that:
- for Section Boundaries
   if you enable them and choose a custom color, the color is applied
   if you disable them and let the custom color, the color is still applied!

- for unvisited links:
   if you enable them and choose a custom color, the color is applied
   if you disable them and let the custom color, the by default color (a blue) is      applied
Comment 3 Julien Nabet 2020-01-10 09:59:09 UTC
I tested Table boundaries, 
   if you enable them and choose a custom color, the color is applied
   if you disable them and let the custom color, they don't appear (the by default color isn't applied)
Comment 4 Julien Nabet 2020-01-11 13:05:04 UTC
I submitted this patch on gerrit:
https://gerrit.libreoffice.org/c/core/+/86600
Comment 5 Julien Nabet 2020-01-15 07:54:05 UTC
I don't know if the patch will be accepted, so let's not unassign since an expert dev may fix this.
Comment 6 Julien Nabet 2020-01-15 07:54:24 UTC
(let's unassign)
Comment 7 Rafael Lima 2023-01-19 18:42:42 UTC
The color used for "Section boundaries" can be hidden via View -> Text boundaries.

I think the checkbox for this color wasn't supposed to exist in the Application Colors dialog.

Maybe we should remove it?
Comment 8 Heiko Tietze 2023-01-20 09:20:51 UTC
We could:
a) have a dedicated color for section boundaries and a special switch to turn it off
b) dedicated color for section boundaries but turn it off via text boundaries (current situation)
c) use the text boundaries color and turn it off via text boundaries (meaning to remove the color option)

My take is c).

SwViewOption::GetSectionBoundColor() is used in SwPageFrame::PaintNotesSidebar() and SwSubsRects::PaintSubsidiary().
Comment 9 sdc.blanco 2023-01-20 16:45:55 UTC
(In reply to Heiko Tietze from comment #8)
> My take is c).
because....?

2ยข about a), b) and c) in comment 8: 

a) is best because can turn off text boundaries, but still have a way to indicate section boundaries. Similarly, can keep text boundaries and hide section boundaries.

b) is tolerable if a) is not accepted, but then the on/off checkbox should be removed from Applications Colors.

c) seems to imply removing section color boundaries completely, for no apparent reason. Not being able to mark section boundaries is a disadvantage, especially in master documents.
Comment 10 Heiko Tietze 2023-01-23 08:40:14 UTC
The section boundaries would be treated as ordinary text boundaries. I don't see a reason to distinguish the two.
Comment 11 Regina Henschel 2023-01-24 14:09:47 UTC
I'm clearly against option c). It is useful to easily distinct sections from other parts of the document.

Do not treat them same as text boundaries. It is useful to set a different color if you debug the structure of a document or to easily see linked areas in master document for example.

The checkbox works in AOO 4.1.6 but is already broken in LO 3.5.1.

So my take is, fix the not working checkbox.
Comment 12 Rafael Lima 2023-01-24 14:19:59 UTC
From the 3 options proposed in Comment #8 I think the best one is (a).

Note that currently have "View - Text Boundaries", so we can add a new command "Section Boundaries" in the View menu as well.
Comment 13 Rafael Lima 2023-01-24 18:02:58 UTC
I proposed a patch that implements option (a). It's available for review in Gerrit.

https://gerrit.libreoffice.org/c/core/+/146077
Comment 14 Cor Nouws 2023-01-25 10:03:42 UTC
(In reply to Rafael Lima from comment #13)
> I proposed a patch that implements option (a). It's available for review in
> Gerrit.
> 
> https://gerrit.libreoffice.org/c/core/+/146077
thanks :)
that is to fix bug 124510 - which I'm in favor of.
Comment 15 Commit Notification 2023-01-25 13:38:56 UTC
Rafael Lima committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/79811c27f34d3e752de1bc3959605c5d58ac2365

tdf#129905 Create toggle for Section boundaries

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 16 Commit Notification 2023-02-22 13:37:56 UTC
Rafael Lima committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/28e7502be32f76ff20a38b644e29f1d6c40bbe24

Related tdf#129905 Add new .uno:SectionBoundaries to the Notebookbar

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 17 Commit Notification 2024-03-26 12:33:07 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/47af9e64a573684eb42faa097e327e31777a2b58

tdf#129905 tdf#160365 sw: don't always draw text boundary on frames

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 18 Commit Notification 2024-03-26 16:08:35 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/09b3dd1cb0c1741cf3560fc9faf2aec696d5c9a2

tdf#129905 tdf#160365 sw: don't always draw text boundary on frames

It will be available in 24.2.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 19 Commit Notification 2024-03-26 18:54:09 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/576398b0493eb642af5221605dcc28ca7656630e

tdf#129905 tdf#160365 sw: don't always draw text boundary on frames

It will be available in 7.6.7.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 20 Justin L 2024-03-27 20:15:09 UTC
*** Bug 124510 has been marked as a duplicate of this bug. ***