tdf#129905: can turn off section boundaries with Options-Application Colors

Change-Id: I9cf6d3544114791dc73bc641018fdeaf976a7f09